# ready2rip

./: .gitignore  README.md  meson.build  meson_options.txt
appimage/: AppRun.in  build-appimage.sh  org.ready2rip.Ready2Rip.desktop
data/: meson.build  org.ready2rip.Ready2Rip.desktop.in  org.ready2rip.Ready2Rip.gschema.xml  org.ready2rip.Ready2Rip.metainfo.xml.in
flatpak/: org.ready2rip.Ready2Rip.yml
po/: POTFILES.in  meson.build
src/: meson.build  ready2rip.in
src/ready2rip/: __init__.py  __main__.py  accuraterip.py  application.py  config.py  config.py.in  drive_setup.py  icons.py  main.py  metadata_dialog.py  paths.py  replaygain.py  settings.py  setup_dialog.py  util.py  window.py
src/ready2rip/artwork/: __init__.py  fetch.py
src/ready2rip/disc/: __init__.py  cache.py  discid_util.py  drive_info.py  drive_status.py  features.py  htoa.py  probe.py
src/ready2rip/metadata/: __init__.py  cache.py  providers.py
src/ready2rip/native/: ar_offset_scan.c
src/ready2rip/rip/: __init__.py  cue.py  engine.py  paranoia_stats.py  riplog.py
src/ready2rip/tags/: __init__.py  writer.py
